--- a/_extensions/modern2-cv/_extension.yml
+++ b/_extensions/modern2-cv/_extension.yml
@@ -5,5 +5,10 @@ quarto-required: ">=1.3.0"
 contributes:
   formats:
     pdf:
+      filters:
+        - styles.lua
+        - para.lua
+      template-partials:
+        - partials/biblio.tex
       template: template.tex
 
